--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "es2015",
+    "module": "es2020",
     "outDir": "./",
+    "moduleResolution": "node",
     "strict": true,
     "declaration": true,
     "removeComments": true,
